<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xkysel.myapplication.MainActivity">

    <TextView
        android:id="@+id/TW_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:id="@+id/RL_setMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/TW_title">

        <EditText
            android:id="@+id/ET_angle"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_angle"/>

        <EditText
            android:id="@+id/ET_speed"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ET_angle"
            android:hint="@string/hint_speed" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ET_speed"
            android:text="@string/button_text" />
    </RelativeLayout>
</RelativeLayout>
